# ChangeLog for dev-ruby/compass
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*compass-0.12.2-r1 (17 Jul 2013)

  17 Jul 2013; Hans de Graaff <graaff@gentoo.org> -compass-0.12.2.ebuild,
  +compass-0.12.2-r1.ebuild:
  Drop deprecated fssm gem only needed for the project watcher.

*compass-0.12.2 (19 Nov 2012)

  19 Nov 2012; Hans de Graaff <graaff@gentoo.org> +compass-0.12.2.ebuild,
  +metadata.xml:
  Initial import.
