@@ -1,1 +1,2 @@
 DIST compass-0.12.2-git.tar.gz 2019736 SHA256 94d15a5e9a4b019ebc6fb7d1297a817da278efa8935ec8f0c47c3ad5b347464e SHA512 2de5a583aa5e2aee10bd374b011271aee1ba713a1088d1397057ef0745b5d6581907178e8f566275278a0863c1995c4ebc87c82f0707f4197a36ab05864a8bb9 WHIRLPOOL 46d9aed86fd6c649562e5903364280de2601f792ec357e7b4266785cb102c237c7e62f33cbec9a6c17ab1196013a9af1c3f3c1ad4237c77d2764aff1602bcf94
+DIST compass-0.12.3-git.tar.gz 2019689 SHA256 614fd5cdfff2ca50741f5f243941713bace99f441c52b8b0a2e95553a034a7c9 SHA512 45678a244b99642e9d56f42eb8a048faa1cdc3dbfd3563d1eedb614c4bede5154ae5d3c59a543f4885da9f5dd65b353610cce7ec65fd2099787627e5fb812d90 WHIRLPOOL bae32441777ef0b53171dbf81263a1bef2416bc45d4dd96cec8fbd87e8a39635710bdc134846cfc4aaa7c0c3c4635afc1338f415919264f5b69e46d5e21743cd
