@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/compass
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*compass-0.12.3 (27 Mar 2014)
+
+  27 Mar 2014; Hans de Graaff <graaff@gentoo.org> +compass-0.12.3.ebuild:
+  Version bump.
 
 *compass-0.12.2-r1 (17 Jul 2013)
 
